--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name":         "libarow",
-  "description",  "D implementation of AROW linear classification algorithm",
+  "description":  "D implementation of AROW linear classification algorithm",
   "authors":      ["Kazuya Gokita"],
   "homepage":     "https://github.com/kazoo04/libarow-d",
   "license":      "MIT license",
